# ny-lang

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  add_test.py  check_mod.py  dump_resolver.py  find_funcs.py  grep.py  mod2.py  mod_resolver.py  read_out8.py  run.py  run2.py  run3.py  run4.py  run5.py  run6.py  run7.py  run8.py  run9.py
.github/workflows/: ci.yml
benchmarks/: README.md  ackermann.c  ackermann.go  ackermann.ny  binarytrees.c  binarytrees.go  binarytrees.ny  concurrent_sum.go  concurrent_sum.ny  fib.c  fib.go  matmul.c  matmul.go  nbody.c  nbody.go  nbody.ny  sieve.c  sieve.go  sieve.ny  spectralnorm.c  spectralnorm.go  spectralnorm.ny
docs/: LIMITATIONS.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: calculator.ny  csv_parser.ny  data_pipeline.ny  error_demo.ny  fibonacci.ny  fibonacci_bench.ny  functional.ny  go_channels.ny  gpu_ffi.ny  hello.ny  job_queue.ny  mandelbrot.ny  matmul_bench.ny  neural_net.ny  parallel_sum.ny  plugin_system.ny  safe_pointers.ny  sqlite_demo.ny  todo_app.ny  type_safe_api.ny  variables.ny  word_count.ny
examples/benchmark/: main.ny  math.ny  sort.ny  stringmap.ny
examples/python_ffi/: main.py  ml_ops.ny  test_main.py
ny-build/: Cargo.toml
ny-build/src/: config.rs  error.rs  main.rs
ny-build/src/commands/: build.rs  mod.rs
ny-build/tests/: build.rs
runtime/: arena.c  chan.c  channel.c  error.c  future.c  gc.c  gc.h  hashmap.c  hashmap_generic.c  json.c  string.c  tensor.c  threadpool.c
specs/: ROADMAP.md
specs/001-lnge-compiler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ny-core-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-operators-casting/: plan.md  research.md  spec.md  tasks.md
specs/004-strings-enums-tuples/: plan.md  research.md  spec.md  tasks.md
specs/005-heap-memory/: spec.md
specs/006-tagged-unions-loop/: spec.md
specs/007-impl-blocks/: spec.md
specs/008-traits/: spec.md
specs/009-slices/: spec.md
specs/010-file-io/: spec.md
specs/011-unsafe-pointers/: spec.md
specs/012-concurrency-foundation/: spec.md
specs/013-simd-infrastructure/: spec.md
specs/014-test-framework/: spec.md
specs/015-concurrency-primitives/: plan.md  spec.md  tasks.md
src/: ai.rs  formatter.rs  lib.rs  lsp.rs  main.rs  monomorphize.rs
src/ai/: generator.rs  mod.rs  translator.rs
src/cdp/: activation.rs  identity.rs  (+6 more)
stdlib/: analytics.ny  cdp.ny  io.ny  math.ny  series.ny  strings.ny
tests/: cdp_framework.rs  compile_run.rs  error_tests.rs  ffi_tests.rs  slm_test.rs  wasm_tests.rs
(+192 files in other folders)
