[package]
name = "ny"
version = "0.1.0"
edition = "2021"
description = "Ny Lang compiler - Low-level language for AI/ML with extreme performance"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-1-force-dynamic"] }
codespan-reporting = "0.13"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
