[package]
name = "ny"
version = "0.1.0"
edition = "2021"
description = "Ny Lang compiler - Low-level language for AI/ML with extreme performance"
license = "MIT"
repository = "https://github.com/suportly/ny-lang"
homepage = "https://github.com/suportly/ny-lang"
readme = "README.md"
keywords = ["compiler", "language", "llvm", "ai", "performance"]
categories = ["compilers", "command-line-utilities"]
rust-version = "1.75"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-1-force-dynamic"] }
codespan-reporting = "0.13"
clap = { version = "4", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[[bin]]
name = "ny"
path = "src/main.rs"

[[bin]]
name = "ny-lsp"
path = "src/lsp.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[test]]
name = "wasm_tests"
path = "tests/wasm_tests.rs"
