[package]
name = "ny-lang"
version = "0.1.0"
edition = "2021"
description = "Low-level language for AI/ML with extreme performance"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
ariadne = "0.4.1"
colored = "2.1.0"
# CDP Framework dependencies
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"

[[bin]]
name = "ny"
path = "src/main.rs"
