[package]
name = "ny-build"
version = "0.1.0"
edition = "2021"
description = "A Cargo-like Build System and Package Manager for Ny Lang"
license = "MIT"
repository = "https://github.com/suportly/ny-lang"
homepage = "https://github.com/suportly/ny-lang"
rust-version = "1.75"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
fs_extra = "1.3"

[[bin]]
name = "ny-build"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
